--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,15 +6,14 @@ media_folder: "static/image" # Media files will be stored in the repo under imag
 public_folder: "/image" 
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "_posts/blog" # The path to the folder where the documents are stored
+  - name: "AI" # Used in routes, e.g., /admin/collections/blog
+    label: "A.I" # Used in the UI
+    folder: "content/art/ai" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "thumbnail", widget: "image" }
-      - { label: "Rating (scale of 1-5)", name: "rating", widget: "number" }
+      - { label: "Featured Image", name: "featuredimage", widget: "image" }
       - { label: "Body", name: "body", widget: "markdown" }
