--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -22,6 +22,18 @@ collections:
       - { label: "Content Year", name: "postyear", widget: "string" }
       - { label: "Content Category", name: "contentdesc", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
+  - name: "about" # Used in routes, e.g., /admin/collections/blog
+    label: "About" # Used in the UI
+    folder: "content/about" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Featured Image", name: "profileimage", widget: "image" }
+      - { label: "Content Category", name: "contentdesc", widget: "string" }
+      - { label: "About Blurb", name: "body", widget: "markdown" }
   - name: "AI" # Used in routes, e.g., /admin/collections/blog
     label: "A.I" # Used in the UI
     folder: "content/art/AI" # The path to the folder where the documents are stored
