--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -9,7 +9,7 @@ collections:
   
   - name: "Collage" # Used in routes, e.g., /admin/collections/blog
     label: "Collage" # Used in the UI
-    folder: "content/art/collage" # The path to the folder where the documents are stored
+    folder: "content/creation/collage" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -17,6 +17,7 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
+      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -36,7 +37,7 @@ collections:
       - { label: "About Blurb", name: "body", widget: "markdown" }
   - name: "AI" # Used in routes, e.g., /admin/collections/blog
     label: "A.I" # Used in the UI
-    folder: "content/art/AI" # The path to the folder where the documents are stored
+    folder: "content/creation/AI" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -44,6 +45,7 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
+      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -51,7 +53,7 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "Drawing" # Used in routes, e.g., /admin/collections/blog
     label: "Drawing" # Used in the UI
-    folder: "content/art/drawing" # The path to the folder where the documents are stored
+    folder: "content/creation/drawing" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -59,14 +61,15 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
+      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
       - { label: "Content Category", name: "contentdesc", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
-  - name: "Graphic" # Used in routes, e.g., /admin/collections/blog
-    label: "Graphic" # Used in the UI
-    folder: "content/Design/Graphic" # The path to the folder where the documents are stored
+  - name: "Design" # Used in routes, e.g., /admin/collections/blog
+    label: "Design" # Used in the UI
+    folder: "content/creation/design_1" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -74,6 +77,7 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
+      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -113,7 +117,7 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "bird" # Used in routes, e.g., /admin/collections/blog
     label: "bird" # Used in the UI
-    folder: "content/photography/bird" # The path to the folder where the documents are stored
+    folder: "content/capturing/bird" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -121,6 +125,7 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
+      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -129,7 +134,7 @@ collections:
     
   - name: "editorial" # Used in routes, e.g., /admin/collections/blog
     label: "Editorial" # Used in the UI
-    folder: "content/photography/editorial" # The path to the folder where the documents are stored
+    folder: "content/capturing/editorial" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -137,6 +142,7 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
+      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -145,7 +151,7 @@ collections:
     
   - name: "product" # Used in routes, e.g., /admin/collections/blog
     label: "Product" # Used in the UI
-    folder: "content/photography/product" # The path to the folder where the documents are stored
+    folder: "content/capturing/product" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -153,6 +159,7 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
+      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -161,7 +168,7 @@ collections:
      
   - name: "video" # Used in routes, e.g., /admin/collections/blog
     label: "Video" # Used in the UI
-    folder: "content/video" # The path to the folder where the documents are stored
+    folder: "content/capturing/video" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -169,6 +176,7 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Video", name: "featuredimage", widget: "file", allow_multiple: true }
+      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
