--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -9,7 +9,7 @@ collections:
   
   - name: "Collage" # Used in routes, e.g., /admin/collections/blog
     label: "Collage" # Used in the UI
-    folder: "content/creation/collage" # The path to the folder where the documents are stored
+    folder: "content/art/collage" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -17,7 +17,6 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
-      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -37,7 +36,7 @@ collections:
       - { label: "About Blurb", name: "body", widget: "markdown" }
   - name: "AI" # Used in routes, e.g., /admin/collections/blog
     label: "A.I" # Used in the UI
-    folder: "content/creation/AI" # The path to the folder where the documents are stored
+    folder: "content/art/AI" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -45,7 +44,6 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
-      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -53,7 +51,7 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "Drawing" # Used in routes, e.g., /admin/collections/blog
     label: "Drawing" # Used in the UI
-    folder: "content/creation/drawing" # The path to the folder where the documents are stored
+    folder: "content/art/drawing" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -61,15 +59,14 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
-      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
       - { label: "Content Category", name: "contentdesc", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
-  - name: "Design" # Used in routes, e.g., /admin/collections/blog
-    label: "Design" # Used in the UI
-    folder: "content/creation/design_1" # The path to the folder where the documents are stored
+  - name: "Graphic" # Used in routes, e.g., /admin/collections/blog
+    label: "Graphic" # Used in the UI
+    folder: "content/Design/Graphic" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -77,7 +74,6 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
-      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -117,7 +113,7 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "bird" # Used in routes, e.g., /admin/collections/blog
     label: "bird" # Used in the UI
-    folder: "content/capturing/bird" # The path to the folder where the documents are stored
+    folder: "content/photography/bird" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -125,7 +121,6 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
-      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -134,7 +129,7 @@ collections:
     
   - name: "editorial" # Used in routes, e.g., /admin/collections/blog
     label: "Editorial" # Used in the UI
-    folder: "content/capturing/editorial" # The path to the folder where the documents are stored
+    folder: "content/photography/editorial" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -142,7 +137,6 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
-      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -151,7 +145,7 @@ collections:
     
   - name: "product" # Used in routes, e.g., /admin/collections/blog
     label: "Product" # Used in the UI
-    folder: "content/capturing/product" # The path to the folder where the documents are stored
+    folder: "content/photography/product" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -159,7 +153,6 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
-      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -168,7 +161,7 @@ collections:
      
   - name: "video" # Used in routes, e.g., /admin/collections/blog
     label: "Video" # Used in the UI
-    folder: "content/capturing/video" # The path to the folder where the documents are stored
+    folder: "content/video" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -176,7 +169,6 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Video", name: "featuredimage", widget: "file", allow_multiple: true }
-      - { label: "More Images", name: "images", widget: "image", allow_multiple: true }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
