--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,7 +21,7 @@ collections:
         name: "images"
         widget: "list"
         fields:
-          - { label: "Image", name: "src", widget: "image", required: true }
+          - { label: "Image", name: "src", widget: "image", required: false }
           - { label: "Alt Text", name: "alt", widget: "string", required: false }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
@@ -54,7 +54,7 @@ collections:
         name: "images"
         widget: "list"
         fields:
-          - { label: "Image", name: "src", widget: "image", required: true }
+          - { label: "Image", name: "src", widget: "image", required: false }
           - { label: "Alt Text", name: "alt", widget: "string", required: false }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
@@ -75,7 +75,7 @@ collections:
         name: "images"
         widget: "list"
         fields:
-          - { label: "Image", name: "src", widget: "image", required: true }
+          - { label: "Image", name: "src", widget: "image", required: false }
           - { label: "Alt Text", name: "alt", widget: "string", required: false }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
@@ -96,7 +96,7 @@ collections:
         name: "images"
         widget: "list"
         fields:
-          - { label: "Image", name: "src", widget: "image", required: true }
+          - { label: "Image", name: "src", widget: "image", required: false }
           - { label: "Alt Text", name: "alt", widget: "string", required: false }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
@@ -118,7 +118,7 @@ collections:
         name: "images"
         widget: "list"
         fields:
-          - { label: "Image", name: "src", widget: "image", required: true }
+          - { label: "Image", name: "src", widget: "image", required: false }
           - { label: "Alt Text", name: "alt", widget: "string", required: false }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
@@ -140,7 +140,7 @@ collections:
         name: "images"
         widget: "list"
         fields:
-          - { label: "Image", name: "src", widget: "image", required: true }
+          - { label: "Image", name: "src", widget: "image", required: false }
           - { label: "Alt Text", name: "alt", widget: "string", required: false }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
@@ -157,7 +157,12 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
-      - { label: "Images", name: "images", widget: "image", allow_multiple: true }
+      - label: "Images"
+        name: "images"
+        widget: "list"
+        fields:
+          - { label: "Image", name: "src", widget: "image", required: false }
+          - { label: "Alt Text", name: "alt", widget: "string", required: false }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -174,7 +179,12 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
-      - { label: "Images", name: "images", widget: "image", allow_multiple: true }
+      - label: "Images"
+        name: "images"
+        widget: "list"
+        fields:
+          - { label: "Image", name: "src", widget: "image", required: false }
+          - { label: "Alt Text", name: "alt", widget: "string", required: false }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
@@ -191,7 +201,12 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: true }
-      - { label: "Images", name: "images", widget: "image", allow_multiple: true }
+      - label: "Images"
+        name: "images"
+        widget: "list"
+        fields:
+          - { label: "Image", name: "src", widget: "image", required: false }
+          - { label: "Alt Text", name: "alt", widget: "string", required: false }
       - { label: "Post Type", name: "type", widget: "select", options: ["content", "other"]}
       - { label: "Content Description", name: "descblurb", widget: "string" }
       - { label: "Content Year", name: "postyear", widget: "string" }
